# claude_usage_in_taskbar

./: .gitignore  CLAUDE.md  CODE_SIGNING_POLICY.md  COMMENTS_FOR_BEPY.md  Cargo.toml  README.md  TASK3_NOTES.md  TODOs.md  WORKFLOWS_FOR_SIRBEPY.md  main.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  popup.html  preload.js  profile-picker.html  profile-preload.js  settings.html  settings.js  tauri.conf.json  tsconfig.json  usage.html  vite.config.ts  vitest.config.mjs
src/: auth.rs  (+35 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/characters/acolyte/: character.json
src-tauri/assets/characters/peasant/: character.json
src-tauri/assets/characters/peon/: character.json
src-tauri/assets/characters/warcraft/: game.json
src-tauri/assets/characters/warcraft/acolyte/: character.json
src-tauri/assets/characters/warcraft3/: game.json
src-tauri/capabilities/: default.json
src-tauri/examples/: tooltip_preview.rs
src-tauri/src/: accounts.rs  auth.rs  channels.rs  chat.rs  context_status.rs  daemon_link.rs  display_state.rs  history.rs  hook_server.rs  hooks.rs  instances.rs  ipc.rs  lib.rs  main.rs  notifications.rs  scheduler.rs  scraping.rs  session_files.rs  sessions.rs  settings.rs  shutdown_guard.rs  state.rs  system_control.rs  token_stats.rs  tokens.rs  tray.rs  types.rs  usage_parser.rs  when_done.rs
src-tauri/src/accounts/: drift.rs  env.rs  identity.rs  login_step.rs  migration.rs  model.rs  profile.rs  store.rs  wizard.rs
src-tauri/src/auth/: login_flow.rs
src-tauri/src/channels/: kill.rs  lifecycle.rs  manager.rs  spawn.rs  vault_detector.rs  watchdog.rs  window_chrome.rs
src-tauri/src/characters/: assets.rs  assign.rs  bundled.rs  cache.rs  loader.rs  mod.rs  slots.rs  whitelist.rs
src-tauri/src/chat/: billing.rs  history.rs  parser.rs  runner.rs  takeover.rs
src-tauri/src/daemon/: broadcast.rs  channel_adopt.rs  channels.rs  claude_config.rs  close_watch.rs  detector_task.rs  device_registry.rs  frame.rs  handshake.rs  health.rs  hooks_server.rs  idle.rs  instance.rs  jsonl_tail.rs  lifecycle.rs  lockfile.rs  methods.rs  mod.rs  notifier.rs  preview.rs  push.rs  rate_limit.rs  remote_handlers.rs  remote_server.rs  rpc.rs  schedule.rs  session.rs  settings_cache.rs  spawn_self.rs  state.rs  stt.rs  transport_common.rs  transport_unix.rs  transport_windows.rs
src-tauri/src/daemon/hooks_server/: commit_lock.rs  context.rs  lifecycle.rs  mod.rs  permission.rs  preview.rs  relay.rs  stop.rs
src-tauri/src/daemon/methods/: channels.rs  lifecycle.rs  mod.rs  permission.rs  registry.rs  schedule.rs
src-tauri/src/daemon_client/: mod.rs
src-tauri/src/files/: mod.rs  scan.rs
src-tauri/src/hooks/: detector.rs  installer.rs  instances.rs  server.rs  session_files.rs
src-tauri/src/ipc/: accounts.rs  ai_todos.rs  audio.rs  audio_preview.rs  auth.rs  channels.rs  characters.rs  chat.rs  drain.rs  files.rs  git.rs  git_diff.rs  misc.rs  models.rs  news.rs  overlay_window.rs  preview.rs  project_groups.rs  project_icons.rs  projects.rs  remote_access.rs  schedule.rs  servers.rs  settings.rs  skill_usage.rs  slash.rs  storage.rs  tokens.rs  update.rs  usage.rs  window.rs
src-tauri/src/ipc/accounts/: identity.rs  management.rs  mod.rs  setup_prompt.rs  wizard.rs  wizard_tests.rs
src-tauri/src/ipc/chat/: attachments.rs  builtins.rs  daemon_bridge.rs  history.rs  lifecycle.rs  mod.rs  run.rs  watcher.rs
src-tauri/src/mcp/: server.rs
src-tauri/src/meeting/: mod.rs  signal.rs  windows_source.rs
src-tauri/src/news/: mod.rs  scheduler.rs  scraper.rs  store.rs  summarizer.rs
src-tauri/src/notifications/: audio.rs  piper.rs  rules.rs  soundpacks.rs
src-tauri/src/scraping/: client.rs  parser.rs
src-tauri/src/sessions/: chat_config.rs  detector.rs  kinds.rs  persistence.rs  recurrence.rs  registry.rs  scheduled_items.rs
src-tauri/src/settings/: identity.rs  overrides.rs  paths.rs  store.rs
src-tauri/src/skill_usage/: mod.rs  parser.rs  store.rs  types.rs
src-tauri/src/slash/: builtins.rs  enumerate.rs  mod.rs  parse.rs  watcher.rs
src-tauri/src/storage/: db.rs  migration.rs  mod.rs  retention.rs  skill_store.rs  token_store.rs  usage_store.rs
src-tauri/src/tokens/: aggregate.rs  backfill.rs  capacity.rs  drain.rs  live.rs  quota.rs  record.rs  title.rs  walker.rs
src-tauri/src/tray/: bars.rs  display_mode.rs  fonts.rs  icon_render.rs  menu.rs  threshold.rs
src-tauri/src/types/: automation.rs  chat.rs  news.rs  notifications.rs  project.rs  usage.rs
src-tauri/src/util/: mod.rs  process.rs
src-tauri/src/when_done/: engine.rs  engine_tests.rs  mod.rs  protocol.rs
src-tauri/tests/: app_daemon_mode_e2e.rs  characters_bundled_smoke.rs  characters_loader.rs  characters_migration.rs  daemon_channels_e2e.rs  daemon_chat_e2e.rs  daemon_hooks_e2e.rs  daemon_multi_account_spawn_env_e2e.rs  daemon_schedule_e2e.rs  daemon_session_e2e.rs  daemon_smoke.rs  daemon_spike_stdin_interrupt.rs  detector_reconcile.rs  export_types.rs  files_scan.rs  hook_installer_merge.rs  hook_listener_inherit.rs  hook_server_instances.rs  icon_render_renders.rs  instances_registry.rs  legacy_import_parse.rs  live_api.rs  news_real_index.rs  projects_ipc.rs  remote_listener_inherit.rs  session_files_parse.rs  settings_roundtrip_renders.rs  skill_usage_endpoint.rs  skill_usage_parser.rs  skill_usage_store.rs  slash_enumerate.rs  slash_parse.rs  sound_packs_install.rs  spike_pty.rs  vault_detector_parse.rs
src-tauri/tests/fixtures/: anthropic-news-2026-05-09.html
src-tauri/tests/fixtures/skill_usage/: auto.jsonl  chained.jsonl  manual.jsonl  multi_skill.jsonl
tauri/: .gitignore  Cargo.toml  package-lock.json  tauri.conf.json
tauri/src/: audio.rs  auth.rs  cdp.rs  fonts.rs  hook_server.rs  icon.rs  icon_settings.rs  ipc.rs  lib.rs  main.rs  notifications.rs  paths.rs  scheduler.rs  scraper.rs  session.rs  settings.rs  soundpacks.rs  state.rs  token_stats.rs  tray.rs  types.rs  usage_parser.rs
tauri/tests/: settings_roundtrip_renders.rs  shim_shape_mapping.test.mjs  sound_packs_install.rs
(+776 files in other folders)
