[package]
name = "claude-usage-tauri"
version = "0.1.109"
edition = "2021"
rust-version = "1.80"
# Two bins live here (the app + cc-companion-daemon). `cargo tauri dev`/`cargo
# run` need this to know which one is the app.
default-run = "claude-usage-tauri"

[lib]
name = "claude_usage_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cc-companion-daemon"
path = "src/bin/cc_companion_daemon.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-window-state = "2.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "gzip", "brotli", "deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false }
url = "2"
rand = "0.8"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "ws", "query"] }
sha2 = "0.10"
rust-embed = "8"
mime_guess = "2"
rodio = { version = "0.19", default-features = false, features = ["mp3", "symphonia-mp3", "symphonia-wav", "vorbis"] }
cpal = "0.15"
tauri_kit_audio = { path = "../vendor/tauri_kit/tauri/audio" }
which = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
sysinfo = "0.31"
once_cell = "1"
ts-rs = "10"
portable-pty = "0.8"
scraper = { version = "0.20", default-features = false }
notify = "6"
rusqlite = { version = "0.40", features = ["bundled"] }
# QR pairing for remote-access (SVG render only; no `image` feature needed).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Media_Audio",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
# test-util enables tokio's paused clock (start_paused) so the when_done engine
# integration test fast-forwards its 1s ticks + 30s countdown instead of waiting
# real wall-clock seconds. Dev-only: not pulled into the release binary.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
